## src/Makefile.am ##

INCLUDES = -I../include

lib_LIBRARIES = libglpk.a

libglpk_a_SOURCES = \
glpavl.c \
glpchol.c \
glpdmp.c \
glpiet.c \
glpinv.c \
glpios1.c \
glpios2.c \
glpios3.c \
glpipm.c \
glplib1a.c \
glplib1b.c \
glplib2.c \
glplib3.c \
glplpp1.c \
glplpp2.c \
glplpt.c \
glplpx1.c \
glplpx2.c \
glplpx3.c \
glplpx4.c \
glplpx5.c \
glplpx6a.c \
glplpx6b.c \
glplpx6c.c \
glplpx6d.c \
glplpx7.c \
glplpx8a.c \
glplpx8b.c \
glplpx8c.c \
glplpx8d.c \
glplpx8e.c \
glpluf.c \
glpmat.c \
glpmip1.c \
glpmip2.c \
glpmpl1.c \
glpmpl2.c \
glpmpl3.c \
glpmpl4.c \
glpmps.c \
glpqmd.c \
glprng.c \
glpspx1.c \
glpspx2.c \
glpstr.c \
glptsp.c

## eof ##
